fix progression bar style (space left behind) when it is Nil (#1802)

--- a/packages/@coorpacademy-components/src/molecule/card-content/style.css
+++ b/packages/@coorpacademy-components/src/molecule/card-content/style.css
@@ -205,3 +205,8 @@
     font-size: 12px;
   }
 }
+
+.hideProgressBar {
+  composes: progressWrapper;
+  opacity: 0;
+}
